# delphes-pipeline

./: .gitignore  DESIGN.md  LICENSE.txt  README.md  pixi.toml  pyproject.toml
cards/: cms_card_v0.tcl  cms_card_v1.tcl
cards/tuning/: README.md  _schema.json  btag_v0.json  diagnostic_map.json  met_v0.json  targets.json  tau_v0.json
delphes_pipeline/: __init__.py
delphes_pipeline/core/: __init__.py  closure.py  context.py  io.py  matching.py  nanoaod.py  observables.py  plotting.py  provenance.py  references.py  report.py  result.py
delphes_pipeline/extensions/: __init__.py  mtautau.py  trigger.py
delphes_pipeline/ntuplizer/: __init__.py  convert.py  objects.py  schema.py
delphes_pipeline/plots/: __init__.py  figures.py  make_plots.py  quantities.py
delphes_pipeline/tuning/: __init__.py  anchor.py  correctionlib_wp.py  derive_maps.py  maps.py  report.py  run_tuning.py  targets.py
delphes_pipeline/validation/: __init__.py  (+2 more)
docs/: README.md  card_patch_validation.md  card_v1_summary.md  cms_card_v0_to_v1.patch
generation/: README.md
runners/: make_validation_plots.sh  run_tuning.sh  validate.sbatch  validate_all.sh
scripts/: mhh_overlay.py  nsbi_overlay.py  plot_tagger_v0_vs_v1.py
tests/: conftest.py  make_candle_fixture.py  make_fixture.py  make_nano_fixture.py  make_signal_fixture.py  test_anchor.py  test_candles.py  test_card_v1.py  test_gate_failures.py  test_io.py  test_level0.py  test_level4.py  test_maps.py  test_mtautau.py  test_ntuplizer.py  test_observables.py  test_pilot_gate.py  test_plots.py  test_smoke.py  test_tuning.py
(+23 files in other folders)
