[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "delphes-pipeline"
version = "0.1.0"
description = "Delphes card-validation gate for the HH -> bb tautau NSBI pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Jingjing Pan" }]
dependencies = [
  "numpy",
  "scipy",
  "uproot>=5",
  "awkward>=2",
  "pyyaml",
  "matplotlib",
]

[project.optional-dependencies]
plots = ["mplhep"]
test = ["pytest", "pyarrow"]

[project.scripts]
delphes-validate = "delphes_pipeline.validation.run_validation:main"

[tool.hatch.build.targets.wheel]
packages = ["delphes_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
